--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-header": "3.1.1",
     "eslint-plugin-import": "2.31.0",
     "husky": "^9.1.7",
+    "jsdom": "^26.0.0",
     "mocha": "10.8.2",
     "mocha-multi-reporters": "^1.5.1",
     "sinon": "19.0.2",
