--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,10 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js 20
+      - name: Use Node.js 22
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22.12.0
+      - name: Update NPM
+        run: npm install -g npm@10.9.2
       - run: npm ci
       - run: npm run lint
       - run: npm run test
@@ -23,10 +25,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
-      - name: Use Node.js 20
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22.12.0
+      - name: Update NPM
+        run: npm install -g npm@10.9.2
       - run: npm ci
       - run: npm run semantic-release
         env:
