--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "c8 mocha",
     "lint": "eslint .",
     "prepare": "husky",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "semantic-release-dry": "semantic-release --dry-run --branches $CI_BRANCH"
   },
   "mocha": {
     "recursive": "true",
