--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,10 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js 20.x
+      - name: Use Node.js 22
         uses: actions/setup-node@v4
         with:
           node-version: '22.x'
+      - name: Update NPM
+        run: npm install -g npm@10.9.2
       - run: npm ci
       - run: npm run lint
       - run: npm test
@@ -34,10 +36,14 @@ jobs:
     if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js 22.x
+        with:
+          persist-credentials: false
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '22.x'
+      - name: Update NPM
+        run: npm install -g npm@10.9.2
       - run: npm ci
       - run: npm run semantic-release
         env:
