Revert "fix(sites-30112): support transforming model field values (#10)"
This reverts commit 082c84489dff628c4c51b02af2ab11de92cc50b8. But keeps some changes in packaging.js

--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@xmldom/xmldom": "0.9.7",
-    "fast-xml-parser": "5.0.9",
-    "he": "1.2.0",
+    "@xmldom/xmldom": "^0.9.7",
+    "he": "^1.2.0",
     "jszip": "3.10.1"
   },
   "devDependencies": {
