--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@xmldom/xmldom": "^0.9.7",
-    "he": "^1.2.0",
-    "jszip": "3.10.1"
+    "@xmldom/xmldom": "0.9.7",
+    "he": "1.2.0",
+    "jszip": "3.10.1",
+    "xml-formatter": "3.6.5"
   },
   "devDependencies": {
     "@adobe/eslint-config-helix": "2.0.8",
