--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@xmldom/xmldom": "0.9.7",
     "he": "1.2.0",
     "jszip": "3.10.1",
+    "path-browserify": "^1.0.1",
     "xml-formatter": "3.6.5"
   },
   "devDependencies": {
